a11y keyboard no longer causes peeking launcher to appear at half-height after close

Bug: 881510
Change-Id: Ic75fb402df6dad4fd1c863a3475a09f45092ed6e
Reviewed-on: https://chromium-review.googlesource.com/1225798
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591840}
Former-commit-id: 392f9653da8d1492beae5a27303934c7cfcf6aaf